--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.jpa.show-sql = true
 
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url = jdbc:mysql://localhost:3306/space
+org.hibernate.dialect.Dialect = org.hibernate.dialect.MySQL8Dialect
